# waysmoke

./: .editorconfig  Cargo.toml  README.md  deny.toml
pkagent/: Cargo.toml
pkagent/src/: main.rs  org.freedesktop.PolicyKit1.AuthenticationAgent.xml
shell/: Cargo.toml
shell/src/: dock.rs  dummy_wp.spv  main.rs  quad.spv  style.rs  util.rs  wallpaper.rs
shell/src/dock/: app.rs  power.rs
shell/src/svc/: media.rs  mod.rs  power.rs
shell/src/util/: apps.rs  icons.rs
wstk/: Cargo.toml
wstk/src/: event_loop.rs  handle.rs  iced.rs  lib.rs  multimonitor.rs  run.rs  style.rs  surfaces.rs  toplevels.rs  widgets.rs
wstk/src/widgets/: addeventlistener.rs  getregion.rs  prim.rs
