[workspace]
resolver = "2"
members = [
	"wstk",
	"shell",
	"pkagent",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
opt-level = "s"
panic = "abort"

[patch.crates-io]

# wayland-client    = { git = "https://github.com/Smithay/wayland-rs" }
# wayland-cursor    = { git = "https://github.com/Smithay/wayland-rs" }
# wayland-sys       = { git = "https://github.com/Smithay/wayland-rs" }
# wayland-scanner   = { git = "https://github.com/Smithay/wayland-rs" }
# wayland-protocols = { git = "https://github.com/Smithay/wayland-rs" }
# wayland-commons   = { git = "https://github.com/Smithay/wayland-rs" }

gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib-macros = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }

# patch: avoid lifetime https://github.com/Smithay/client-toolkit/pull/163 + keyboard Main
smithay-client-toolkit = { git = "https://github.com/unrelentingtech/client-toolkit", branch = "master" }

# patch: transparency (composite_alpha_mode: hal::CompositeAlphaMode::PreMultiplied)
wgpu       = { git = "https://github.com/unrelentingtech/wgpu", branch = "v0.10-alpha" }
wgpu-hal   = { git = "https://github.com/unrelentingtech/wgpu", branch = "v0.10-alpha" }
wgpu-core  = { git = "https://github.com/unrelentingtech/wgpu", branch = "v0.10-alpha" }
wgpu-types = { git = "https://github.com/unrelentingtech/wgpu", branch = "v0.10-alpha" }

# crates.io releases don't have gio/glib versions locked to minor 0 (matching git >_<)
polkit-sys = { git = "https://github.com/DankBSD/polkit-rs", branch = "trunk" }
polkit = { git = "https://github.com/DankBSD/polkit-rs", branch = "trunk" }
polkit-agent-sys = { git = "https://github.com/DankBSD/polkit-rs", branch = "trunk" }
polkit-agent = { git = "https://github.com/DankBSD/polkit-rs", branch = "trunk" }

# polkit-sys = { path = "../polkit-rs/polkit-sys/" }
# polkit = { path = "../polkit-rs/polkit/" }
# polkit-agent-sys = { path = "../polkit-rs/polkit-agent-sys/" }
# polkit-agent = { path = "../polkit-rs/polkit-agent/" }
