[package]
name = "waysmoke-pkagent"
version = "2020.5.0"
license = "Unlicense"
authors = ["Val Packett <val@packett.cool>"]
edition = "2018"

[dependencies]
fragile = "1"
futures = "0.3"
glib = "=0.14.0"
gio = { version = "=0.14.0", features = ["v2_50"] }
polkit = "0"
polkit-agent = "0"

wstk = { path = "../wstk" }
