[package]
name = "waysmoke-shell"
version = "2020.5.0"
license = "Unlicense"
authors = ["Val Packett <val@packett.cool>"]
edition = "2018"

[dependencies]
lazy_static = "1"
futures = "0.3"
glib = "=0.15.0"
gio = { version = "=0.15.0", features = ["v2_50"] }
linicon = { version = "2", default-features = false }
tree_magic_mini = "3"
wgpu = "0.10"

wstk = { path = "../wstk" }
