[package]
name = "waysmoke-shell"
version = "2022.1.0"
license = "Unlicense"
authors = ["Val Packett <val@packett.cool>"]
edition = "2021"

[dependencies]
lazy_static = "1"
futures = "0.3"
glib = "=0.16.0"
gio = "=0.16.0"
linicon = { version = "2", default-features = false }
tree_magic_mini = "3"
wgpu = "0.12"

wstk = { path = "../wstk" }
