[package]
name = "wstk"
version = "0.0.0"
authors = ["Val Packett <val@packett.cool>"]
edition = "2018"

# [build-dependencies]
# wayland-scanner = "0.28"

[dependencies]
# byteorder = "1"
# typemap = "0.3"
raw-window-handle = "0.3"
# wayland-commons = "0.28"
wayland-client = { version = "0.28", features = ["use_system_lib"] }
smithay-client-toolkit = { version = "0.12", default-features = false }

async-trait = "0.1"
futures = "0.3"
glib = "=0.10.0"

# patch: damage, transparency, image-debloat
iced_core =     { git = "https://github.com/myfreeweb/iced" }
iced_futures =  { git = "https://github.com/myfreeweb/iced" }
iced_wgpu =     { git = "https://github.com/myfreeweb/iced", features = ["default_system_font", "svg", "png"] }
iced_graphics = { git = "https://github.com/myfreeweb/iced" }
iced_native =   { git = "https://github.com/myfreeweb/iced" }

# iced_core =     { path = "../../../hecrj/iced/core" }
# iced_futures =  { path = "../../../hecrj/iced/futures" }
# iced_wgpu =     { path = "../../../hecrj/iced/wgpu", features = ["default_system_font", "svg", "png"] }
# iced_graphics = { path = "../../../hecrj/iced/graphics" }
# iced_native =   { path = "../../../hecrj/iced/native" }
