[package]
name = "wstk"
version = "0.0.0"
license = "Unlicense"
authors = ["Val Packett <val@packett.cool>"]
edition = "2021"

# [build-dependencies]
# wayland-scanner = "0.29"

[dependencies]
# byteorder = "1"
# typemap = "0.3"
raw-window-handle = "0.4"
# wayland-commons = "0.29"
wayland-client = { version = "0.29", features = ["use_system_lib"] }
smithay-client-toolkit = { version = "0.15", default-features = false }
event-listener = "2"

async-trait = "0.1"
futures = "0.3"
glib = "=0.15.0"

# patch: damage, image-debloat, GLib loop instead of conflicting local executor
iced_core =     { git = "https://github.com/unrelentingtech/iced" }
iced_futures =  { git = "https://github.com/unrelentingtech/iced" }
iced_wgpu =     { git = "https://github.com/unrelentingtech/iced", features = ["default_system_font", "svg", "png"] }
iced_graphics = { git = "https://github.com/unrelentingtech/iced" }
iced_native =   { git = "https://github.com/unrelentingtech/iced" }

# iced_core =     { path = "../../../hecrj/iced/core" }
# iced_futures =  { path = "../../../hecrj/iced/futures" }
# iced_wgpu =     { path = "../../../hecrj/iced/wgpu", features = ["default_system_font", "svg", "png"] }
# iced_graphics = { path = "../../../hecrj/iced/graphics" }
# iced_native =   { path = "../../../hecrj/iced/native" }
